<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="locationtestone.app.com.locationtestone.Main2Activity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/first_name"
        android:id="@+id/first_name_id"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name_id"
        android:id="@+id/last_name_id"
        android:hint="@string/last_name"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit_id"
        android:text="@string/submit_button"
        android:layout_marginTop="20dp"
        android:textColor="#fcfcfc"
        android:background="#f12f96"
        android:layout_below="@+id/last_name_id"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
